--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,9 @@
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+    <script src="https://apis.google.com/js/platform.js"></script>
+    <meta name="google-signin-client_id" content="718314167492-665i2grclnrts2ccrddmll14np4pohco.apps.googleusercontent.com">
 </head>
 
 <body class="fix-header card-no-border fix-sidebar">
